[metadata]
name = Flask-HTTPAuth
version = 4.7.1.dev0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = HTTP authentication for Flask routes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/flask-httpauth
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/flask-httpauth/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: MicroPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
install_requires =
    flask
package_dir =
    = src
py_modules =
    flask_httpauth
